# mush-stream

./: .gitignore  Cargo.toml  README.md  client.toml.example  host.toml.example  justfile
.github/workflows/: release.yml
crates/app/: index.html  package.json  pnpm-lock.yaml
crates/app/src/: App.tsx  api.ts  hosting.tsx  main.tsx
crates/app/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
crates/app/src-tauri/capabilities/: default.json
crates/app/src-tauri/icons/: icon.icns
crates/app/src-tauri/src/: addresses.rs  audio_sessions.rs  bin_locator.rs  client_session.rs  configs.rs  gamepads.rs  host_session.rs  lib.rs  logs.rs  main.rs  monitors.rs  probe.rs  recents.rs  state.rs
crates/app/src/assets/components/: Navigation.tsx
crates/app/src/components/: Icons.tsx  Sidebar.tsx  Titlebar.tsx  primitives.tsx
crates/app/src/css/: index.css
crates/app/src/hooks/: useRolling.ts
crates/app/src/pages/: Connect.tsx  Home.tsx  Host.tsx  Logs.tsx  Settings.tsx
crates/app/src/pages/host/: AudioSourcesCard.tsx  CaptureRegionCard.tsx  ConnectedClientCard.tsx  EncodeCard.tsx  PageHeader.tsx  ShareAddressCard.tsx  TelemetryCard.tsx  helpers.ts
crates/client/: README.md
crates/client/src/: config.rs  lib.rs  main.rs  runner.rs
crates/client/src/audio/: decoder.rs
crates/client/src/decode/: mod.rs
crates/client/src/display/: mod.rs
crates/client/src/input/: mod.rs
crates/client/src/transport/: mod.rs
crates/common/src/: lib.rs
crates/common/src/protocol/: audio.rs  control.rs  input.rs  mod.rs
crates/host/: README.md
crates/host/src/: config.rs  lib.rs  main.rs  runner.rs
crates/host/src/audio/: mod.rs  sessions.rs
crates/host/src/capture/: mod.rs
crates/host/src/encode/: mod.rs
crates/host/src/transport/: mod.rs  pacer.rs
crates/host/src/upnp/: mod.rs
crates/mush-stream-client/: Cargo.toml  README.md  build.rs
crates/mush-stream-client/src/: config.rs  main.rs
crates/mush-stream-client/src/audio/: decoder.rs  mod.rs
crates/mush-stream-client/src/decode/: mod.rs
crates/mush-stream-client/src/display/: mod.rs
crates/mush-stream-client/src/input/: mod.rs
crates/mush-stream-client/src/transport/: mod.rs
crates/mush-stream-client/src/upnp/: mod.rs
crates/mush-stream-common/: Cargo.toml
crates/mush-stream-common/src/: lib.rs
crates/mush-stream-common/src/protocol/: error.rs  mod.rs  video.rs
crates/mush-stream-host/: Cargo.toml  README.md  build.rs
crates/mush-stream-host/src/: config.rs  main.rs
crates/mush-stream-host/src/audio/: capture.rs  encoder.rs  mixer.rs  mod.rs  process_loopback.rs  sessions.rs
crates/mush-stream-host/src/encode/: mod.rs
crates/mush-stream-host/src/transport/: mod.rs  pacer.rs
crates/mush-stream-host/src/vigem/: mod.rs
