[workspace]
resolver = "3"
members = [
    "crates/mush-stream-common",
    "crates/mush-stream-host",
    "crates/mush-stream-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
png = "0.17"
ffmpeg-the-third = "3"

mush-stream-common = { path = "crates/mush-stream-common" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Noisy pedantic lints that don't carry their weight here:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Cast lints fire on every BGRA byte index; allow with case-by-case review.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
# doc_markdown wants backticks around every wire-format identifier
# (`frame_id`, `packet_index`, etc.) — too noisy for module-level prose
# describing the protocol. Identifiers we *want* highlighted still get
# explicit backticks.
doc_markdown = "allow"
