[workspace]
resolver = "3"
members = [
    "crates/mush-stream-common",
    "crates/mush-stream-host",
    "crates/mush-stream-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    # Audio capture (WASAPI loopback + per-process loopback) + COM init
    # + process enumeration for the per-app blacklist.
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Variant",
] }
serde = { version = "1", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
thiserror = "2.0.18"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
png = "0.18.1"
ffmpeg-the-third = "5.0.0+ffmpeg-8.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "time", "signal"] }
# winit 0.30 defaults pull in wayland/x11; we're Windows-only. Pin rwh_05
# explicitly so winit's `Window` exposes the raw-window-handle 0.5 traits
# that pixels 0.14 still requires.
winit = { version = "0.30", default-features = false, features = ["rwh_05", "rwh_06"] }
pixels = "0.17.0"
gilrs = "0.11.1"
vigem-client = "0.1"
reed-solomon-erasure = "6"
clap = { version = "4", features = ["derive"] }
# Used to lift the kernel UDP receive buffer cap so localhost or LAN
# bursts (especially keyframe packets) don't drop on the floor before the
# tokio receiver has a chance to drain them.
socket2 = "0.6"
# Public-domain 8x8 bitmap font used by the client's debug overlay so we
# don't have to ship a TTF or pull in a full text-rasterization stack.
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
# Audio playback on the client. cpal abstracts WASAPI on Windows for the
# render side and gives us a simple "default output device" path; the
# capture side is direct-WASAPI on the host because cpal doesn't expose
# the per-process loopback API we need for the blacklist.
cpal = "0.16"

# For automatic portforwarding
upnpc-rs = { git = "https://github.com/Drew-Chase/upnpc-rs.git" }

mush-stream-common = { path = "crates/mush-stream-common" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Noisy pedantic lints that don't carry their weight here:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Cast lints fire on every BGRA byte index; allow with case-by-case review.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
# doc_markdown wants backticks around every wire-format identifier
# (`frame_id`, `packet_index`, etc.) — too noisy for module-level prose
# describing the protocol. Identifiers we *want* highlighted still get
# explicit backticks.
doc_markdown = "allow"
