[package]
name = "mush-stream-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
mush-stream-common = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
ffmpeg-the-third = { workspace = true }
winit = { workspace = true }
pixels = { workspace = true }
gilrs = { workspace = true }
reed-solomon-erasure = { workspace = true }
clap = { workspace = true }
upnpc-rs = { workspace = true }

[lints]
workspace = true
