[package]
name = "mush-stream-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"

[dependencies]
mush-stream-common = { workspace = true }
windows = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
png = { workspace = true }
ffmpeg-the-third = { workspace = true }
tokio = { workspace = true }
vigem-client = { workspace = true }
reed-solomon-erasure = { workspace = true }
clap = { workspace = true }
upnpc-rs = { workspace = true }
socket2 = { workspace = true }

[dev-dependencies]
# tokio::test(start_paused) for deterministic timing tests in pacer.rs.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
