[package]
name = "mush_stream"
version = "0.0.0"
description = ""
authors = ["Drew Chase (Work) <dcmanproductions@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mush_stream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
serde = { workspace = true }
serde_json = "1.0.149"
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
local-ip-address = "0.6"
chrono = { version = "0.4", features = ["serde"] }
png = { workspace = true }
base64 = "0.22"
# Extends the workspace `windows` features with the registry API used to
# read the ViGEmBus driver version, plus the DXGI types we need to
# enumerate adapters for the GPU label in the sidebar.
windows = { workspace = true, features = ["Win32_System_Registry"] }

# The mush libraries
mush-stream-client = { path = "../../client" }
mush-stream-host = { path = "../../host" }

[lints]
workspace = true
